--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,18 @@
 	</dependencies>
 	<build>
 		<finalName>webappExample</finalName>
+		
+		<plugins>
+	<plugin>
+    <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>2.2</version>
+    <configuration>
+        <url>http://localhost:8063/manager/text</url>
+        <server>TomcatServer</server>
+        <path>/webAppExample</path>
+    </configuration>
+</plugin>
+</plugins>
 	</build>
 </project>
