--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
           <artifactId>tomcat7-maven-plugin</artifactId>
           <version>2.2</version>
     <configuration>
-        <url>http://localhost:8063/manager/text</url>
+        <url>http://${testenv.hostip}:8063/manager/text</url>
         <server>TomcatServer</server>
         <path>/webAppExample</path>
     </configuration>
